# trpg-348

./: .gitignore  ip_schema_348.md  main.py  models.py  project_design.md  pyproject.toml
agents/: character_agent.py  comm_gate.py  dice_agent.py  narrative_agent.py  orchestrator.py  time_agent.py  validator.py
api/: main.py
data/ip/dimension_348/: index.json
data/ip/dimension_348/characters/: hajun.json  hector.json  joy_josephine.json  kenshin.json  matthew.json  shuned.json
data/ip/dimension_348/timeline/: canon_events.json  causality_map.json
data/ip/dimension_348/world/: communication.json  geography.json  physics.json
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChoicePanel.tsx  GameScreen.tsx  NarrativeBox.tsx  StatusBar.tsx
frontend/lib/: api.ts  types.ts
game/: branch.py  session.py  state.py
llm/: client.py
rag/: dynamic_rag.py  embedder.py  indexer.py  retriever.py
